# ORCA

./: .gitignore  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
app/api/dolphin/: client.py  endpoints.py  exceptions.py  models.py
app/controllers/: __init__.py  dolphin_controller.py
app/core/: app_context.py  config.py  logging.py
app/database/: database.py  migrations.py  models.py  session.py
app/excel/: __init__.py  excel_report_target.py  mapper.py  offsets.py  preview.py  scanner.py  workbook.py  writer.py
app/repositories/: __init__.py  account_repository.py  dolphin_repository.py  excel_mapping_repository.py  history_repository.py  mapping_repository.py  settings_repository.py  statistics_repository.py
app/services/: dolphin_service.py  excel_mapping_service.py  mapping_service.py  statistics_service.py
app/ui/: __init__.py  main_window.py
app/ui/accounts/: __init__.py  page.py
app/ui/dashboard/: __init__.py  page.py
app/ui/excel/: page.py
app/ui/history/: page.py
app/ui/preview/: page.py
app/ui/settings/: __init__.py  page.py
app/ui/widgets/: __init__.py  navigation.py
assets/: .gitkeep
backups/: .gitkeep
docs/: README.md
tests/: test_database_and_mapping.py  test_dolphin_client.py  test_structure.py
