[tool.poetry]
name = "orca"
version = "0.1.0"
description = "ORCA - Minimal desktop application scaffold"
authors = ["ORCA Developer <dev@orca.local>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PySide6 = "*"
SQLAlchemy = "*"
httpx = "*"
loguru = "*"
openpyxl = "*"
pydantic-settings = "*"
qasync = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
